<?xml version="1.0"?>
<package >
  <name>opendog_control</name>
  <version>0.0.0</version>
  <description>The opendog_control package</description>

  <author>Ruben Arts</author>
  <maintainer email="ruben.arts@hotmail.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>

  <export>


  </export>
</package>
